<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CSeccond"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="91dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/checkcompras3"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/checklistcompras"
        tools:ignore="UnknownId,VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="357dp"
        android:layout_height="39dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorGray"
        android:gravity="start"
        android:text="@string/fecha2"
        android:textColor="@color/colorBlack"
        android:textColorHighlight="@color/colorGray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints,UnknownId" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="256dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/check_list_de_compras"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnknownId" /><![CDATA[

    "
        android:layout_width="357dp"
        android:layout_height="39dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="437dp" />





    ]]>

    <EditText
        android:id="@+id/txt_ingresoProducto"
        android:layout_width="245dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/seccion_productos"
        app:layout_constraintEnd_toStartOf="@+id/agregarProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_consultar" />

    <ImageButton
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="280dp"
        android:layout_marginRight="280dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back2"
        android:onClick="CPrimary"
        app:layout_constraintBottom_toTopOf="@+id/txt_consultar"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/guardar"
        android:contentDescription="@string/guardar"
        app:layout_constraintBottom_toTopOf="@+id/txt_consultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/txt_consultar"
        android:layout_width="297dp"
        android:layout_height="188dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <LinearLayout
        android:id="@+id/seccion_productos"
        android:layout_width="298dp"
        android:layout_height="190dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingresoProducto">

    </LinearLayout>

    <Button
        android:id="@+id/agregarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="30dp"
        android:drawableLeft="@drawable/agregar"
        android:text="Agregar"
        app:layout_constraintBottom_toTopOf="@+id/seccion_productos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_ingresoProducto" />


</androidx.constraintlayout.widget.ConstraintLayout>